<RelativeLayout

    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/TF_location"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/B_search"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/TF_location"
        android:onClick="onClick"
        android:text="@string/Search"
        android:layout_toRightOf="@+id/TF_location" />
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.shivani.locationlast.MapsActivity" />
    <Button
        android:id="@+id/B_hopistals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TF_location"
        android:onClick="onClick"
        android:text="@string/Hospitals"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/B_police"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TF_location"
        android:layout_toEndOf="@+id/B_hopistals"
        android:onClick="onClick"
        android:text="@string/Police"
        android:layout_toRightOf="@+id/B_hopistals" />



</RelativeLayout>